# malwi

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  RESEARCH.md  cli  fuck.py  pyproject.toml  research  setup.py
.claude/: settings.local.json
.github/workflows/: release.yml
cmds/: download_and_preprocess.sh  download_and_preprocess_distilbert.sh  download_data.sh  preprocess.sh  preprocess_and_train.sh  preprocess_and_train_distilbert.sh  preprocess_and_train_svm.sh  preprocess_data.sh  preprocess_distilbert.sh  preprocess_svm.sh  scan_malicious_samples.sh  train.sh  train_distilbert.sh  train_distilbert_tiny.sh  train_svm_layer.sh  train_tokenizer.sh
docs/: javascript.md  python.md  rust.md  typescript.md
examples/: __init__.py  benign.py
examples/malicious/discordpydebug-0.0.4/: LICENSE  PKG-INFO  setup.py
samples/malicious/3m-promo-gen-api-1.0/: setup.py
samples/malicious/3web-1.0.0/: setup.py
samples/malicious/adad-4.57/: setup.py
samples/malicious/adcandy-10.49/: setup.py
samples/malicious/adcontrol-9.56/: setup.py
samples/malicious/adcpu-5.94/: setup.py
samples/malicious/adcraft-3.12/: setup.py
samples/malicious/adgame-7.69/: setup.py
samples/malicious/adgrand-6.67/: setup.py
samples/malicious/adgui-3.67/: setup.py
samples/malicious/adhttp-2.51/: setup.py
samples/malicious/adinfo-7.26/: setup.py
samples/malicious/adload-4.4/: setup.py
samples/malicious/admask-10.81/: setup.py
samples/malicious/admc-7.87/: setup.py
samples/malicious/admine-4.35/: setup.py
samples/malicious/adpep-8.40/: setup.py
samples/malicious/adpip-3.22/: setup.py
samples/malicious/adpost-3.63/: setup.py
samples/malicious/adpyw-10.70/: setup.py
samples/malicious/adram-4.76/: setup.py
samples/malicious/adultra-1.46/: setup.py
samples/malicious/adv2099m-1.0.0/: setup.py
samples/malicious/adv2099m3-1.0.0/: setup.py
src/cli/: entry.py  predict.py  pypi.py  scan.py  triage.py
src/common/: bytecode.py  code_object.py  config.py  files.py  malwi_object.py  malwi_report.py  mapping.py  messaging.py  predict_distilbert.py  triage.py
src/malwi/: __init__.py  _version.py
src/research/: analyze_data.py  ast_to_malwicode copy.py  ast_to_malwicode.py  cli.py  create_svm_data.py  csv_writer.py  disasemble_python.py  disassemble_python.py  download_data.py  filter_data.py  malwi_object.py  mapping.py  normalize_data.py  predict.py  predict_distilbert.py  predict_svm_layer.py  preprocess.py  pypi.py  train.py  train.sh  train_distilbert.py  train_svm_layer.py  train_tokenizer.py  triage.py
tests/: README_triage_tests.md  test_api_exports.py  test_ast_to_malwicode.py  test_basic_cli.py  test_cli.py  test_cli_entry.py  test_code_extraction.py  test_create_decision_tokens.py  test_csv_writer.py  test_disassemble_python.py  test_filter_data.py  test_malwi_object.py  test_map_ast.py  test_mapping.py  test_module_extraction.py  test_preprocess_serialization.py  test_recursion_handling.py  test_report_creation.py  test_report_result_field.py  test_split_samples.py  test_triage.py  test_triage_cli.py  test_windowing.py
tests/source_samples/: BYTECODE_FILES_SUMMARY.md  DEBUGGING_GUIDE.md  README.md  SPLIT_SUMMARY.md  expected_javascript_output.txt  expected_javascript_output_mapped.txt  expected_python_output.txt  expected_python_output_mapped.txt  javascript.js  python.py
triaging/benign/: 0d35fbea7f11e0ce5b78f267692fbe4e0f31ef08 (1).yaml  1067953294cc6ffa022d9faa9acd3b9dbad5d170 (1).yaml  41fb786fe26a4e140b5d8111a2b9932656f52559 (1).yaml  6623c94b6c27244fb858767426d578cdf3b81d18 (1).yaml  6e61412e5bc2a7d493d73d6ab0de1154ca9288c1 (1).yaml  920ce09cdaf12665cbe26ea5299a7d3b2b496e18 (1).yaml
util/: README_BYTECODE_TOOLS.md  analyze_missing_opcodes.py  build_helpers.py  bytecode_diff_analyzer.py  bytecode_side_by_side.py  bytecode_visual_diff.py  compare_bytecode.py  fetch_hf_commit.py  generate_domain_bytecode.py  get_hf_model_info.py  pin_repositories.py  pinned_repositories.json  regenerate_test_data.py  test_specific_opcodes.py  triage_pypi.py  update_model_commit.py  view_domain_bytecode.py
(+3322 files in other folders)
