[build-system]
requires = ["setuptools>=80.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "malwi"
version = "0.0.3"
description = "malwi - AI Python Malware Scanner"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Marvin Schirrmacher", email = "m@schirrmacher.io" },
]

dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.6.0",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "scikit-learn>=1.6.1",
    "tokenizers>=0.21.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "tree-sitter>=0.24.0",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-languages>=1.10.2",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-typescript>=0.23.2",
]

[project.scripts]
malwi = "cli.entry:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"research.syntax_mapping" = ["*.json"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]
