[build-system]
requires = ["setuptools>=80.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "malwi"
dynamic = ["version"]
description = "malwi - AI Python Malware Scanner"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Marvin Schirrmacher", email = "m@schirrmacher.io" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
]

dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.6.0",
    "nltk>=3.9.1",
    "ollama>=0.5.1",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "questionary>=2.1.0",
    "scikit-learn>=1.6.1",
    "tabulate>=0.9.0",
    "tokenizers>=0.21.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
]

[project.scripts]
malwi = "cli.entry:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "malwi._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"research.syntax_mapping" = ["*.json"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]
