[build-system]
requires = ["setuptools>=80.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "malwi"
dynamic = ["version"]
description = "malwi - AI Python Malware Scanner"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

authors = [
    { name = "Marvin Schirrmacher", email = "m@schirrmacher.io" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch>=2.7.0",
    "transformers>=4.51.3", 
    "tokenizers>=0.21.1",
    "tree-sitter>=0.25.0",
    "tree-sitter-javascript>=0.23.1", 
    "tree-sitter-python>=0.23.6",
    "tqdm>=4.67.1",
    "tabulate>=0.9.0",
]

[project.scripts]
malwi = "cli.entry:main"

[tool.setuptools]
package-dir = { "" = "src"}

[tool.setuptools.dynamic]
version = { attr = "malwi._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["research", "research.*"]

[tool.setuptools.package-data]
"common.syntax_mapping" = ["*.json"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]

training = [
    "accelerate>=1.6.0",
    "datasets>=3.6.0", 
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "nltk>=3.9.1",
]

triage = [
    "ollama>=0.5.1",
    "questionary>=2.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Exclude util directory from test discovery
norecursedirs = ["util", "examples", ".git", ".tox", "dist", "build", "*.egg"]
